--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -40,7 +40,7 @@
             justify-content: center;
             bottom: 6%;
             left: 50%;
-            transform: translate(-50%);
+            transform: translateX(-50%);
             gap: 20px;
             padding: 10px 20px;
             background: rgb(255, 255, 255, 0.6);
