--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     .logo {
-        font-size: 1.5rem;
+        font-size: 28px;
         display: flex;
         justify-content: center;
         flex: 1;
