--- a/src/components/slider/cardslider.scss
+++ b/src/components/slider/cardslider.scss
@@ -1,6 +1,20 @@
+.card-wrapper {
+
+    margin-top: 60px;
+    .card-header {
+        font-size: 30px;
+        padding: 0 0 20px 10px;
+
+        span {
+            padding: 0 10px 5px 5px;
+            border-bottom: 1px solid #ff64a0;
+
+        }
+    }
 .card-slider{
     width: 100%;
-    height: 300px;
+    height: 400px;
+    
     position: relative;
 
     .cards {
@@ -9,18 +23,78 @@
         white-space: nowrap;
         overflow-x: scroll;
         scrollbar-width: none;
+        scroll-behavior: smooth;
 
        &::-webkit-scrollbar {
         display: none;
        }
 
         .card {
-            width: 320px;
+            width: 250px;
             height: 100%;
-            background: #fff0f0;
             border-radius: 10px;
             display: inline-block;
             margin: 0 5px;
+            position: relative;
+
+            .cover {
+                width: 100%;
+                height: 250px;
+                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                cursor: pointer;
+
+                img {
+                    width:100%;
+                    object-fit: contain;
+                }
+            }
+
+            .card-info{
+                display: flex;
+                flex-direction: column;
+                margin-top: 30px;
+                .album-data, .price{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .album-data {
+                    font-size: 18px; 
+                }
+
+                .artist, .discount {
+                    padding-left: 5px;
+                }
+
+                .price {
+                    margin-top: 20px;
+
+                    .initial {
+                        text-decoration: line-through;
+                        margin-left: 10px;
+                        font-size: 18px;
+                    }
+
+                    .discount {
+                        padding: 5px 10px;
+                        background-color: #ff64a0;
+                        color: white;
+                        border-radius: 15px;
+                        font-size: 20px;
+                        font-weight: 600;
+                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+                    }
+
+                    .no-discount {
+                        margin-top:5px;
+                        font-size: 22px;
+                        font-weight: 500;
+
+                    }
+                }
+            }
         }
     }
 
@@ -35,6 +109,7 @@
         padding: 5px;
         border-radius: 100%;
         opacity: 0.5;
+        z-index: 10;
 
         &:hover {
             opacity: 0.9;
@@ -50,4 +125,5 @@
     }
 
 
+}
 }
