--- a/src/components/slider/cardslider.scss
+++ b/src/components/slider/cardslider.scss
@@ -13,7 +13,7 @@
     }
 .card-slider{
     width: 100%;
-    height: 400px;
+    height: 410px;
     
     position: relative;
 
@@ -40,19 +40,38 @@
             .cover {
                 width: 100%;
                 height: 250px;
-                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                border-top-left-radius: 15px;
+                border-top-right-radius: 15px;
+                box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
                 cursor: pointer;
+                transition: all 50ms ease-in-out;;
 
+                &:hover {
+                    transform: scale(1.01);
+                    box-shadow: rgba(0, 0, 0, 0.8) 0px 3px 8px;
+
+                }
+           
                 img {
                     width:100%;
                     object-fit: contain;
+                    border-top-left-radius: 15px;
+                    border-top-right-radius: 15px;
+                    
                 }
             }
 
             .card-info{
                 display: flex;
                 flex-direction: column;
-                margin-top: 30px;
+                margin-top: 15px;
+                padding-bottom: 10px;
+                border: solid 1px white; 
+                border-bottom-left-radius: 15px;
+                border-bottom-right-radius: 15px;
+                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                background-color: #FDFDFD;
+
                 .album-data, .price{
                     display: flex;
                     justify-content: center;
@@ -67,8 +86,13 @@
                     padding-left: 5px;
                 }
 
+                .artist {
+                    font-weight: 600;
+
+                }
+
                 .price {
-                    margin-top: 20px;
+                    margin-top: 10px;
 
                     .initial {
                         text-decoration: line-through;
@@ -83,7 +107,7 @@
                         border-radius: 15px;
                         font-size: 20px;
                         font-weight: 600;
-                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                        box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
 
                     }
 
@@ -94,6 +118,25 @@
 
                     }
                 }
+
+                .formats {
+                    width:fit-content;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 10px;
+                    padding: 5px 10px;
+                    margin: 15px auto 0 auto;
+                    border: solid 1px white;
+
+
+
+                    .format  img{
+                        height: 25px;
+                        
+                    }
+                }
+
             }
         }
     }
