--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,13 @@
 .footer-wrapper {
-    display: grid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 50px;
-    width: calc(100% - 120px);
+    width: 100%;
     border-top: 1px solid #282828;
-    margin: 0 auto;
-    grid-template-columns: 1fr 1fr;
+    margin: 50px auto 0 auto;
+
+    span {
+        color: #282828;
+    }
 }
