--- a/src/pages/categories/categories.scss
+++ b/src/pages/categories/categories.scss
@@ -9,5 +9,9 @@
 
     .categories-list {
         width: 80%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        row-gap: 20px;
     }
+
 }
