--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -1,7 +1,42 @@
+.filter-header {
+    text-align: center;
+    font-size: 20px;
+}
+
+.filter-title {
+    font-size: 18px;
+    font-weight: 500;
+}
+
 .price-range{
     display: flex;
+    justify-content: left;
+    align-items: center;
     width: 100%;
+    gap: 5px;
     input {
-        min-width: 30px;
+        font-size: 16px;
+        width: 60px;
+        border: 1px dotted grey;
+        padding: 5px 0 5px 5px;
+        border-radius: 5px;
     }
 }
+
+.input-container {
+display: flex;
+align-items: center;
+gap: 6px;
+font-weight: 300;
+
+.filter-checkbox{
+    width: 20px;
+    height: 20px;
+    border: 1px solid #808080;
+    content: "";
+    background: #FFF;
+}
+}
+
+ 
+ 
