--- a/src/components/slider/card.scss
+++ b/src/components/slider/card.scss
@@ -26,11 +26,12 @@
             object-fit: contain;
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
-            
         }
     }
 
     .card-info{
+        width: 100%;
+        height: 150px;
         display: flex;
         flex-direction: column;
         margin-top: 15px;
@@ -45,10 +46,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-wrap: wrap;
+            flex-flow: wrap;
         }
 
         .album-data {
             font-size: 18px; 
+            max-width:100%;
+
         }
 
         .artist, .discount {
@@ -57,6 +62,10 @@
 
         .artist {
             font-weight: 600;
+
+        }
+
+        .title, .artist {
 
         }
 
